    enabled, making it impossible for games to adapt their behavior (for
    example "Six Stories" alters its behavior according to whether graphics and
    sound are enabled in the interpreter preferences.)

  - Fades and crossfades are now correctly advertised as being supported.
    Previously, the interpreter wrongly responded with "not supported" when a
    game was querying about it.


2.1.0 - 2011/02/01
==================

  - Page-pauses (aka "MORE" prompts) are now occurring when the game displays
    more content that will fit in the window.

  - Banners can now have borders.  Note that borders are controlled by the
    game; it's not a feature that can be switched on or off by the player.

  - Banners now correctly take margins into account when calculating sizes.
    This fixes the banner at the bottom in "Walker & Silhouette" for example.

  - The interpreter will no longer allow scrolling in banners unless the game
    allows it.

  - Text rendering is now faster and performs less drawing operations.

  - The interpreter is now able to perform on online check for new versions
    through the "Help->Check for Updates" menu item.

  - Some GUI elements were changed to better comply with various "Human
    Interface Guidelines" on several platforms.  This includes changes in the
    menus as well as using sheets for some dialogs on Mac OS X.

  - On the Mac, running a game by dropping its file on the QTads icon is now
    supported.

  - When the VM requests input from the player, the maximum allowed length of
    input is now taken into account.  Previously, the interpreter would allow
    input to be much longer than what the VM accepts and the extra characters
    were simply truncated.

  - Renamed the Digital Sound/MIDI Music sound options.  They were misleading.
    The "Enable MIDI Sound" option did not control MIDI but rather the
    background sound layer, which is not restricted to MIDI.
