@@ -33,6 +33,8 @@
     Previously, the interpreter wrongly responded with "not supported" when a
     game was querying about it.
 
+  - Fixed a rare crash that occured while entering non-latin characters.
+
 
 2.1.0 - 2011/02/01
 ==================
